[FRONTEND] Added ASP-translate service, and implemented some of the Frontend logic required to deal with the options sent by the backend.
ASP-translate service, translates actions taken through a form into the user_input ASP statement.

Logic added includes an ngOnInit for initial setup, a fetchSvg() function, a submitForm() function and an updateOptions() function.

--- a/Frontend/ClinGraphViz/src/app/graph-options/graph-options.component.html
+++ b/Frontend/ClinGraphViz/src/app/graph-options/graph-options.component.html
@@ -2,5 +2,5 @@
     <label>{{inputName}}</label>
     <br>
     <textarea *ngIf="inputType == 'textarea'"></textarea>
-    <input *ngIf="inputType != 'textarea'" [type]="inputType" />
+    <input *ngIf="inputType != 'textarea'" [type]="inputType" [formControl] = "fc" />
 </div>
