--- a/Frontend/ClinGraphViz/src/app/main-page/main-page.component.html
+++ b/Frontend/ClinGraphViz/src/app/main-page/main-page.component.html
@@ -3,7 +3,7 @@
     <div class="col left">
         <label>OPTIONS</label>
         <br>
-        
+        <app-graph-options></app-graph-options>
     </div>
     <div class="col right"></div>
 </div>
