--- a/Frontend/ClinGraphViz/src/app/graph-options/graph-options.component.html
+++ b/Frontend/ClinGraphViz/src/app/graph-options/graph-options.component.html
@@ -2,5 +2,5 @@
     <label>{{inputName}}</label>
     <br>
     <textarea *ngIf="inputType == 'textarea'"></textarea>
-    <input *ngIf="inputType != 'textarea'" [type]="inputType" [formControl] = "fc" />
+    <input *ngIf="inputType != 'textarea'" [type]="inputType" formControlName = "fc" />
 </div>
