[FRONTEND/BACKEND] Changes so that select elements could be used as options.

--- a/Frontend/ClinGraphViz/src/app/main-page/main-page.component.html
+++ b/Frontend/ClinGraphViz/src/app/main-page/main-page.component.html
@@ -8,8 +8,11 @@
                 <label>{{option.name}}</label>
                 <br>
                 <textarea id="{{option.name + '_' + this.currID}}" *ngIf="option.type == 'textarea'" [formControlName]="option.name"></textarea>
-                <input id="{{option.name + '_' + this.currID}}" *ngIf="option.type != 'textarea' && option.type != 'checkbox'" [type]="option.type" [formControlName]="option.name" (click)="checkClick($event)"/>
                 <input id="{{option.name + '_' + this.currID}}" *ngIf="option.type == 'checkbox'" type="checkbox" [formControlName]="option.name" (click)="checkClick($event)"/>
+                <input id="{{option.name + '_' + this.currID}}" *ngIf="option.type != 'textarea' && option.type != 'checkbox' && option.type != 'select'" [type]="option.type" [formControlName]="option.name" (click)="checkClick($event)"/>
+                <select id="{{option.name + '_' + this.currID}}" *ngIf="option.type == 'select'" [formControlName]="option.name">
+                    <option *ngFor="let val of retrieveSelectOptions(option)" value="{{val}}">{{val}}</option>
+                </select>
             </div>
             <input type="submit" value="Submit">
         </form>
