[FRONTEND/BACKEND] Added a user-encoding file, made changes and fixes to the backend. Prototype finished and working for now. Requires additional testing.

--- a/Frontend/ClinGraphViz/src/app/main-page/main-page.component.html
+++ b/Frontend/ClinGraphViz/src/app/main-page/main-page.component.html
@@ -18,6 +18,8 @@
         </form>
     </div>
     <div class="col right">
+        <h2 *ngIf="errStr.length > 0" style="color: red;">{{errStr}}</h2>
         <div #svgContainer (click)="handleNodeClick($event)"></div>
+        <h2 *ngIf="svgString.length <= 0">No graph was created from your request.</h2>
     </div>
 </div>
