--- a/Frontend/ClinGraphViz/src/app/graph-options/graph-options.component.html
+++ b/Frontend/ClinGraphViz/src/app/graph-options/graph-options.component.html
@@ -1,6 +1,21 @@
 <div>
-    <label>{{inputName}}</label>
-    <br>
-    <textarea *ngIf="inputType == 'textarea'"></textarea>
-    <input *ngIf="inputType != 'textarea'" [type]="inputType" formControlName = "fc" />
+    <form [formGroup]="optionsForm" (ngSubmit)="submitForm()">
+        <div *ngFor="let option of optionsList">
+            <label>{{option.name}}</label>
+            <br>
+            <textarea id="{{option.name + '_' + this.compID}}" *ngIf="option.type == 'textarea'"
+                [formControlName]="option.name"></textarea>
+            <input id="{{option.name + '_' + this.compID}}" *ngIf="option.type == 'checkbox'" type="checkbox"
+                [formControlName]="option.name" />
+            <input id="{{option.name + '_' + this.compID}}"
+                *ngIf="option.type != 'textarea' && option.type != 'checkbox' && option.type != 'select'"
+                [type]="option.type" [formControlName]="option.name" />
+            <select id="{{option.name + '_' + this.compID}}" *ngIf="option.type == 'select'"
+                [formControlName]="option.name">
+                <option *ngFor="let val of retrieveSelectOptions(option)" value="{{val}}">{{val}}</option>
+            </select>
+        </div>
+        <input type="submit" value="Submit">
+    </form>
+
 </div>
