[Backend/Frontend] Now uses the "graph-options" component again, removed some changes to test clinguin compatibility.

--- a/Frontend/ClinGraphViz/src/app/main-page/main-page.component.html
+++ b/Frontend/ClinGraphViz/src/app/main-page/main-page.component.html
@@ -3,7 +3,7 @@
     <div class="col left">
         <label>OPTIONS</label>
         <br>
-        <app-graph-options [optionsList]="optionsList"  [optionsForm]="optionsForm" [compID]="this.currID" (submitEvent)="submitForm()"></app-graph-options>
+        <app-graph-options [optionsList]="optionsList" [optionsForm]="optionsForm" [compID]="currID" (submitEvent)="submitForm()"></app-graph-options>
     </div>
     <div class="col right">
         <h2 *ngIf="errStr.length > 0" style="color: red;">{{errStr}}</h2>
