--- a/Frontend/ClinGraphViz/src/app/graph-options/graph-options.component.html
+++ b/Frontend/ClinGraphViz/src/app/graph-options/graph-options.component.html
@@ -14,7 +14,7 @@
                 [type]="option.type" [formControlName]="option.name" />
             <select id="{{option.name + '_' + this.compID}}" *ngIf="option.type == 'select'"
                 [formControlName]="option.name">
-                <option *ngFor="let val of retrieveSelectOptions(option)" value="{{val}}">{{val}}</option>
+                <option *ngFor="let val of retrieveSelectOptions(option)" [value]="val">{{val}}</option>
             </select>
         </div>
         <input type="submit" value="Submit">
