--- a/Frontend/ClinGraphViz/src/app/main-page/main-page.component.scss
+++ b/Frontend/ClinGraphViz/src/app/main-page/main-page.component.scss
@@ -7,8 +7,21 @@
     justify-content: flex-start;
   }
 
+  .refresh-button {
+    height: 35px;
+    margin-left:10px;
+    margin-top:12px;
+  }
+
+  .reset-graph-button {
+    margin-left:20px;
+  }
+
   .col.semantic {
     margin-left: 50px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 
   }
   .col.graph {
